# libwally-core-lite

./: configure.ac
include/: wally.hpp  wally_crypto.h  wally_psbt.h  wally_transaction.h  wally_zcash.h
src/: Makefile.am  bip32.c  internal.c  internal.h  map.c  psbt.c  psbt_internal_tests.c  psbt_internal_tests.h  psbts.h  script.c  sign.c  transaction.c  wallylite.pc  wallylite.pc.in  wif.c  zcash.c
